kubernetes/infrastructure/ingresses/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - plex.example.com
      secretName: plex-tls-secret
  rules:
    - host: plex.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-proxy-manager
                port:
                  number: 80
